[package]
name = "tempo-tap"
description = "Very simple program to tap tempo on the command line"
repository = "https://github.com/Kestrer/tempo-tap"
readme = "README.md"
keywords = ["tempo", "music"]
license = "MIT OR Apache-2.0"
version = "1.0.1"
authors = ["Kestrer <kestrer.dev@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.19.0"
